# simple-serde

./: Cargo.toml  README.md
src/: lib.rs
src/test/: test_constants.rs  test_trait_impl.rs
