[package]
name = "simple_serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avro-rs = { version = "0.13.0", features = ["snappy"] }
bincode = "1.3.3"
bson = "2.1.0"
byteorder = "1.4.3"
envy = "0.4.2"
flexbuffers = "2.0.0"
json5 = "0.4.1"
postcard = {version = "0.7.3", features = ["alloc"]}
rmp-serde = "1.0.0"
ron = "0.7.0"
serde = "1.0.133"
serde-lexpr = "0.1.2"
serde-pickle = "1.1.0"
serde-xml-rs = "0.5.1"
serde_cbor = "0.11.2"
serde_derive = "1.0.133"
serde_json = "1.0.75"
serde_qs = "0.8.5"
serde_yaml = "0.8.23"
toml = "0.5.8"
zvariant = "3.1.0"
