[package]
name = "simple_serde"
version = "1.1.0"
edition = "2021"
authors = ["Anders Blenstrup-Pedersen <abp-git@ryuu.technology>"]
description = "A wrapper around multiple serde libraries making it easy to encode and decode multiple types"
readme = "README.md"
categories = ["serialization", "deserialization", "Encoding", "Decoding"]
license = "MIT"
repository = "https://github.com/nebula-technologies/simple-serde"
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
accept-limited-xml-serialize = ["serde-xml-rs"]

[dependencies]
avro-rs = { version = "0.13.0", features = ["snappy"] }
bson = "2.4.0"
flexbuffers = "2.0.0"
json5 = "0.4.1"
postcard = { version = "1.0.2", features = ["alloc"] }
rmp-serde = "1.1.1"
ron = "0.8.0"
serde = "1.0.148"
serde-lexpr = "0.1.2"
serde-pickle = "1.1.1"
serde-xml-rs = { version = "0.6.0", optional = true }
serde_cbor = "0.11.2"
serde_derive = "1.0.148"
serde_json = "1.0.89"
serde_qs = "0.10.1"
serde_yaml = "0.9.14"
toml = "0.5.9"
derive_more = "0.99.17"
actix-http= "3.2.2"

[dependencies.http]
version = "0.2.8"
optional = true
